@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150301"
-#define public MagickPackageReleaseDate "snapshot-20150301"
+#define public MagickPackageVersionAddendum ".020150305"
+#define public MagickPackageReleaseDate "snapshot-20150305"
