@@ -145,7 +145,7 @@ pixel in the image.</p>
 quantization error for any single pixel in the image.  This distance
 measure is normalized to a range between 0 and 1.  It is independent
 of the range of red, green, and blue values in the image.</p>
-<p>o normalized_maximum_square_error:  Thsi value is the normalized
+<p>o normalized_maximum_square_error:  This value is the normalized
 maximum quantization error for any single pixel in the image.  This
 distance measure is normalized to a range between 0 and 1.  It is
 independent of the range of red, green, and blue values in your image.</p>
