@@ -1,3 +1,10 @@
+2015-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/bmp.c (ReadBMPImage): BMP reader was wrongly rejecting
+	RLE-compressed files as being too small.  Fixes SourceForge bug
+	#295 "1.3.21 identify regression".  Also fixed 'ping' support code
+	which was still reading the pixels in 'ping' mode.
+
 2015-03-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/palm.c (ReadPALMImage): PALM reader now applies PALM's
